# knc

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  configure.ac
debian/: changelog  control  copyright  knc.install  libknc-dev.install  libknc.install  rules
lib/: Makefile.BSD  Makefile.am  libknc.3  libknc.c  libknc.h  lz4.c  lz4.h  private.h  simple.c  stubgsswrap.c
man/: Makefile  knc.1
python/: pyknc.c  setup.py
test/: Makefile.am  servefile.c  testknc.c  teststream.c  unit-simple.c  unit.c
